<resources>
    <string name="app_name">HybridHero - Beta</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_locate">Locate</string>
    <string name="title_book">Book</string>
    <string name="title_teams">Teams</string>
    <string name="title_wellbeing">Wellbeing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="signin">Sign in</string>
    <string name="signinsso">Sign in with SSO</string>
    <string name="company_name">Company name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot your password\?</string>
    <string name="reg">Registration</string>
    <string name="signinwith">Or</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="covid19">Covid-19 self certification</string>
    <string name="remote">You’re working remotely</string>
    <string name="pls_complete">Please complete your covid self certification</string>
    <string name="checkout">Check Out</string>
    <string name="checkin">Check in</string>
    <string name="skip">Skip</string>
    <string name="check_in_now">Check in now</string>
    <string name="internet">Please Check Internet</string>
    <string name="check_out_success">Check-out successful</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="book_near_by">Book nearby</string>
    <string name="enable_internet">Please Enable Internet</string>
    <string name="my_view_desc">heloo draw canva</string>
    <string name="repeat">Repeat</string>

    <string name="comment">Comments</string>
    <string name="comment_opt">Comments optional</string>

    <string name="subject">Subject</string>
    <string name="spaceadd">(To add external users type their email address and press space)</string>
    <string name="attendeesInternal">Internal participants optional</string>
    <string name="attendeesExternal">External participants optional</string>

    <string name="select_date">Select date</string>

    <!--New...-->
    <string name="set_pin_title">Set up and edit a pin</string>
    <string name="set_pin_content">A pin will allow you to quickly sign in to Hybrid Hero using a unique six character pin.</string>
    <string name="enter_your_pin">Enter your pin</string>
    <string name="reenter_your_pin">Re-enter your pin</string>
    <string name="enter_your_old_pin">Enter your old pin</string>
    <string name="enter_your_new_pin">Enter your new pin</string>
    <string name="reenter_your_new_pin">Re-enter your new pin</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="notifications">Notifications</string>
    <string name="checkInOut_alert">Check-in &amp; Check-out alerts</string>
    <string name="checkInOut_content">Notifications to remind you when an upcoming check-in is required. You will also be notified once you have been checked out.</string>
    <string name="push">Push</string>
    <string name="noty_booking_title">Booking change alerts</string>
    <string name="noty_booking_content">You will be notified when a booking has been created on your behalf, modified, accepted or rejected.</string>
    <string name="noty_covid_reminder_title">Covid-19 self-certification reminders</string>


    <!--Wellbeing-->
    <string name="wellbeing">Wellbeing</string>
    <string name="health_safety">Health and Safety</string>
    <string name="health_tips">Health tips</string>
    <string name="health_eating">Health Eating</string>
    <string name="fire_wardens">Fire wardens</string>
    <string name="first_aid">First aid</string>
    <string name="mental_health">Mental health</string>
    <string name="human_resources">Human resources</string>
    <string name="leave">Leave</string>
    <string name="places">Places</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="benefits">Benefits</string>
    <string name="events">Events</string>
    <string name="trainging">Training</string>
    <string name="notices">Notices</string>
    <string name="personal_help">Personal Help</string>
    <string name="personal_txt">Sometimes everyone faces challenges in their working and personal lives. Every year, one in four of us will experience a mental health problem. We are dedicated to ensuring you get both support and respect at all times. This page is dedicated to supporting you and giving assistance if and when required. We can direct you to someone to help or you can go to some of the links below to get assistance.</string>
    <string name="covid_txt">Covid</string>
    <string name="covid">COVID-19 Self-Certification</string>
    <string name="workspace_assessment">Workspace Assessment</string>
    <string name="rewards">Rewards</string>
    <string name="workspace_survey">Workspace Survey</string>
    <string name="report_hazard">Report a hazard</string>
    <string name="eva_plan">Evacuation plan</string>
    <string name="your_fire_warden">Your Fire wardens</string>
    <string name="today">Today</string>
    <string name="create_issue">Create an issue to raise to your administration team</string>
    <string name="location">Location</string>
    <string name="assessment_date_txt">Duration Assessment for:</string>
    <string name="select_past">Select past booking(if applicable)</string>
    <string name="report_select_date">Date(if applicable)</string>
    <string name="desc">Description</string>
    <string name="submit">Submit</string>
    <string name="videos">Videos</string>
    <string name="guides">Guides</string>
    <string name="req_training">Request Training</string>
    <string name="crate_notice">Create a notice</string>
    <string name="topic">Topic</string>
    <string name="recipents">Recipients</string>
    <string name="select">Select</string>
    <string name="avaliable_from">Avaliable From</string>
    <string name="avaliable_to">Avaliable To</string>
    <string name="if_applicable">If applicable</string>
    <string name="active_notice">Active Notices</string>
    <string name="issue_date">Issue date</string>
    <string name="req_time_off">Request time off</string>
    <string name="type">Type</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="half_day">Half Day</string>
    <string name="note">Note</string>
    <string name="send_request">Send request</string>

    <string name="annual">Annual leave</string>
    <string name="sick">Sick leave</string>
    <string name="family">Family/Compassionate leave</string>
    <string name="medical_appoint">Medical appointment</string>
    <string name="other">Otehr</string>

    <string name="accessibility">Accessibility</string>
    <string name="air">Air</string>
    <string name="cleanliness">Cleanliness</string>
    <string name="light">Light</string>
    <string name="noise">Noise</string>
    <string name="temperature">Temperature</string>
    <string name="chair">Chair</string>
    <string name="desk">Desk</string>
    <string name="display">Display</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="transport_method">Please indicate method of transportation to office</string>

    <string name="car">Car</string>
    <string name="public_trans">(bus, train, tram, ferry, metro, etc.)</string>
    <string name="taxi">Taxi Uber</string>
    <string name="bike">Bike</string>
    <string name="walk">Walk</string>
    <string name="wfh">Work from home</string>
    <string name="keyboard">Keyboard</string>
    <string name="mouse">Mouse</string>
    <string name="phone">Phone</string>
    <string name="mobile">Mobile</string>
    <string name="wifi">Wifi</string>
    <string name="lan">Lan</string>
    <string name="change_password">Change Password</string>
    <string name="avaliable">Avaliable</string>

    <!--Response Handler-->
    <string name="booking_success">Booking Created</string>
    <string name="booking_updated">Booking Updated</string>
    <string name="booking_request">Booking Request Success</string>
    <string name="car_park_request_success">CarPark Request Success</string>
    <string name="desk_book_deleted">Booking Deleted</string>
    <string name="deleted">Deleted</string>
    <string name="active_bookings">Active bookings</string>

    <string name="use">Use Email &amp; Password</string>
    <string name="delete">Delete</string>
    <string name="capacity">Capacity</string>

</resources>