<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.wellbeing.ReportAnIssueActivity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/tool_bar">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ReportBack"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:tint="@color/figmaBlue" />


        </RelativeLayout>

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/report"
            android:id="@+id/profile_update"
            />
        <TextView
            android:id="@+id/profile_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_an_issue"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_issue"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/black"
        />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/reportPastBooking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_past"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/reportLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_select_date"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/reportFromDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="From"
            />
        <EditText
            android:id="@+id/reportToDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="To"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/reportDescr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/reportCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
        android:text="@string/cancel" />
    <TextView
        android:id="@+id/reportSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/submit"
        android:layout_alignParentRight="true"
        />

    </RelativeLayout>

</LinearLayout>