<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10sdp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        >

        <TextView
            android:id="@+id/noticeTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic"
            android:layout_weight="1"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/noticeRecipents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipents"
            android:layout_weight="1"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/issueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issue_date"
            android:layout_weight="1"
            android:gravity="center"
            />



    </LinearLayout>

</RelativeLayout>