<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crate_notice"
        style="@style/TextBold"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <!--tOPIC-->
    <RelativeLayout
        android:id="@+id/topicBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_3sdp"
        android:background="@drawable/rectangle_greybg_with_corner"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:hint="@string/topic"
            android:textColor="@color/figmaBlack"
            android:theme="@style/TextBold" />


    </RelativeLayout>


    <!--dESCCRIPTIN-->
    <RelativeLayout
        android:id="@+id/descriptionBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_3sdp"
        android:background="@drawable/rectangle_greybg_with_corner"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:hint="@string/desc"
            android:textColor="@color/figmaBlack"
            android:theme="@style/TextBold" />


    </RelativeLayout>


    <!--Recepianets-->
    <RelativeLayout
        android:id="@+id/recipiantsBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_3sdp"
        android:background="@drawable/rectangle_greybg_with_corner"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLocateCheckInDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/recipents"
            android:textColor="@color/figmaBlack"
            android:theme="@style/TextBold" />

        <TextView
            android:id="@+id/createNoticeSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/select"
            android:textColor="@color/figmaBlueText"
            android:theme="@style/TextBold" />
    </RelativeLayout>

    <!--AvalibleFrom-->
    <RelativeLayout
        android:id="@+id/avaliableFromBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_3sdp"
        android:background="@drawable/rectangle_greybg_with_corner"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/avaliable_from"
            android:textColor="@color/figmaBlack"
            android:theme="@style/TextBold" />

        <TextView
            android:id="@+id/fromApplicable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/if_applicable"
            android:textColor="@color/figmaBlueText"
            android:theme="@style/TextBold" />
    </RelativeLayout>

    <!--AvalibleTo-->
    <RelativeLayout
        android:id="@+id/avaliableToBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_3sdp"
        android:background="@drawable/rectangle_greybg_with_corner"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/avaliable_to"
            android:textColor="@color/figmaBlack"
            android:theme="@style/TextBold" />

        <TextView
            android:id="@+id/toApplicable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/if_applicable"
            android:textColor="@color/figmaBlueText"
            android:theme="@style/TextBold" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/createNoticeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/_100sdp"
            style="@style/TextBold"
            />

        <TextView
            android:id="@+id/createNoticeCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_100sdp"
            style="@style/TextBold"
            android:textColor="@color/blue"
            />


    </RelativeLayout>

</LinearLayout>