<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/req_time_off"
        style="@style/TextBold"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <!--Type-->
    <RelativeLayout
        android:id="@+id/reqTimeOffTypeBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_3sdp"
        android:background="@drawable/rectangle_greybg_with_corner"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reqTimeOffType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/annual"
            android:textColor="@color/figmaBlack"
            android:theme="@style/TextBold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sickLeaveBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_3sdp"
        android:background="@drawable/rectangle_greybg_with_corner"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sickLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/sick"
            android:textColor="@color/figmaBlack"
            android:theme="@style/TextBold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/familyLeaveBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_3sdp"
        android:background="@drawable/rectangle_greybg_with_corner"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/familyLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/family"
            android:textColor="@color/figmaBlack"
            android:theme="@style/TextBold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/medicalLeaveBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_3sdp"
        android:background="@drawable/rectangle_greybg_with_corner"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/medicalLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/medical_appoint"
            android:textColor="@color/figmaBlack"
            android:theme="@style/TextBold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/traingLeaveBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_3sdp"
        android:background="@drawable/rectangle_greybg_with_corner"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/trainingLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/trainging"
            android:textColor="@color/figmaBlack"
            android:theme="@style/TextBold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/otherLeaveBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_3sdp"
        android:background="@drawable/rectangle_greybg_with_corner"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/otherLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/other"
            android:textColor="@color/figmaBlack"
            android:theme="@style/TextBold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_alignParentBottom="true"
            style="@style/TextBold"

            />

    </RelativeLayout>

</LinearLayout>