<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.wellbeing.CreateNoticeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/tool_bar">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fireBack"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:tint="@color/figmaBlue" />


        </RelativeLayout>

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/notification_icon"
            android:id="@+id/profile_update"
            />
        <TextView
            android:id="@+id/activityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notices"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"

            />

    </LinearLayout>


    <!--Create Notice-->
    <androidx.cardview.widget.CardView
        android:id="@+id/createNoticeBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        android:background="@drawable/button_white_bg"
        app:cardElevation="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_60sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvCreateNotice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/_5sdp"
                android:textStyle="bold"
                android:text="@string/crate_notice"
                android:textColor="@color/black"
                android:textSize="14dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_notice"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic"
            android:layout_weight="1"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipents"
            android:layout_weight="1"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issue_date"
            android:layout_weight="1"
            android:gravity="center"
            />



    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvActiveNotices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="10"
        tools:listitem="@layout/layout_notice_list_adapter"
        android:layout_marginTop="@dimen/_10sdp"
        />

</LinearLayout>